Blender 2.90 Tris to Quads breaks UVs even with Compare UVs checked. #80520

Closed
opened 2020-09-06 14:03:59 +02:00 by Bogdan · 8 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia Geforce GTX 1050 Ti

Blender Version
Broken: 2.90
Worked: 2.83

Short description of error
"Compare UVs" option of Tris to Quads does not stop UV map from breaking after applying it.
Exact steps for others to reproduce the error
Press Space, then select Tris to Quads, check "Compare UVs" and you'll see that UV Map will break.
Blend file is attached.
BlenderBug.blend

Blender 2020-09-06 14-55-28.mp4

**System Information** Operating system: Windows 10 Graphics card: Nvidia Geforce GTX 1050 Ti **Blender Version** Broken: 2.90 Worked: 2.83 **Short description of error** "Compare UVs" option of Tris to Quads does not stop UV map from breaking after applying it. **Exact steps for others to reproduce the error** Press Space, then select Tris to Quads, check "Compare UVs" and you'll see that UV Map will break. Blend file is attached. [BlenderBug.blend](https://archive.blender.org/developer/F8847303/BlenderBug.blend) [Blender 2020-09-06 14-55-28.mp4](https://archive.blender.org/developer/F8847304/Blender_2020-09-06_14-55-28.mp4)

Added subscriber: @Shararamosh

Added subscriber: @Shararamosh

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
It seems that there is an error in the calculation of the final customdata offset.
This deserves to be investigated.

diff --git a/source/blender/bmesh/operators/bmo_join_triangles.c b/source/blender/bmesh/operators/bmo_join_triangles.c
index efb8b810581..dceb2c58625 100644
--- a/source/blender/bmesh/operators/bmo_join_triangles.c
+++ b/source/blender/bmesh/operators/bmo_join_triangles.c
@@ -166,7 +166,7 @@ static bool bm_edge_delimit_cdata(CustomData *ldata,
   r_delim_cd->cd_type = type;
   r_delim_cd->cd_size = CustomData_sizeof(r_delim_cd->cd_type);
   r_delim_cd->cd_offset = CustomData_get_n_offset(ldata, type, 0);
-  r_delim_cd->cd_offset_end = r_delim_cd->cd_size * layer_len;
+  r_delim_cd->cd_offset_end = r_delim_cd->cd_offset + r_delim_cd->cd_size * layer_len;
   return (r_delim_cd->cd_offset != -1);
 }
 

I can confirm. It seems that there is an error in the calculation of the final customdata offset. This deserves to be investigated. ``` diff --git a/source/blender/bmesh/operators/bmo_join_triangles.c b/source/blender/bmesh/operators/bmo_join_triangles.c index efb8b810581..dceb2c58625 100644 --- a/source/blender/bmesh/operators/bmo_join_triangles.c +++ b/source/blender/bmesh/operators/bmo_join_triangles.c @@ -166,7 +166,7 @@ static bool bm_edge_delimit_cdata(CustomData *ldata, r_delim_cd->cd_type = type; r_delim_cd->cd_size = CustomData_sizeof(r_delim_cd->cd_type); r_delim_cd->cd_offset = CustomData_get_n_offset(ldata, type, 0); - r_delim_cd->cd_offset_end = r_delim_cd->cd_size * layer_len; + r_delim_cd->cd_offset_end = r_delim_cd->cd_offset + r_delim_cd->cd_size * layer_len; return (r_delim_cd->cd_offset != -1); } ```

This issue was referenced by 394a287714

This issue was referenced by 394a28771429442ae2946b2b68db726522f7e59f

This issue was referenced by 60fbed3dba

This issue was referenced by 60fbed3dba9f7cafd134f7a6dfe2892252a2d54b

This issue was referenced by f5b6b82598

This issue was referenced by f5b6b825980fc59cc54e69fbc1e967eebee1ad43

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-21 07:07:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80520
There is no content yet.