Fix T80520: Tris to Quads ignores UV delimit option